apps/my-app/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: my-app
  labels:
    environment: production
    app: my-app
