apps/my-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop
  namespace: my-app
  labels:
    app: my-app
spec:
  replicas: 2                          # 2 copies of your app for high availability
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: eshop-container
          image: 217340893387.dkr.ecr.us-east-1.amazonaws.com/my-app:9b6bc43a327de1b1ecd83e4f90fb7ca6f111dca9
          ports:
            - containerPort: 3000     # Express app runs on port 3000
          resources:
            requests:
              cpu: 50m                 # Very low CPU request — fine for a simple HTML app
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
