apps/my-app/deployment1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-canary
  namespace: my-app
  labels:
    app: my-app
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: canary
  template:
    metadata:
      labels:
        app: my-app
        version: canary
    spec:
      containers:
        - name: eshop-container
          image: 217340893387.dkr.ecr.us-east-1.amazonaws.com/my-app:c6384713008253c422615fdf41df05bd2e4f265d
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
