apps/my-app/service1.yml
apiVersion: v1
kind: Service
metadata:
  name: eshop-canary-service
  namespace: my-app
spec:
  type: ClusterIP
  selector:
    app: my-app
    version: canary        # ← only routes to canary pods
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
